feat: adjust diary api
